update my README and fix naming issues
